Changes for 2.1.0

New features:
..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers works without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)

Bug fixes:
..F....... [ZBX-5167] fixed incorrect screen count on the templated screen configuration page (Vedmak)
..F....... [ZBX-5142] changed media type field label from 'Description' to 'Name' (Vedmak)
....I..... [ZBX-5314] increased size of autoincrement fields for PostgreSQL database (Sasha)
..F....... [ZBX-1845] added tabs to host massupdate form (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.3rc1

New features:
...GI..... [ZBX-5171] got rid of agent ipv6 library dependency on older HP-UX machines (dimir)
........S. [ZBX-5450] added support of "KMGTsmhdw" suffixes in the second parameter of count() function (Sasha)
A.F....... [ZBX-1357] added American English translation; thanks to Zabbix translators (Richlv)
A......... [ZBX-2060] implemented the "expandExpression" parameter for the trigger.get and triggerprototype.get methods (Pavels)
A.F....... [ZBXNEXT-1253] implemented flicker-free screens (Eduard)
........S. [ZBX-5318] added remote commands in expanded {ESC.HISTORY} macro (Sasha)
A.F....... [ZBX-1357] added Chinese (Taiwan) translation; thanks to Zabbix translators (Richlv)
A.F....... [ZBX-1357] updated Chinese (China), Brazilian Portuguese, German, Japanese, Latvian, Spanish and Russian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-583] added the maintenance filter to the trigger status page (Pavels)
A......... [ZBX-5351] implemented the "selectTimeperiods" parameter for the maintenance.get method (Pavels)
..F....... [ZBX-4972] added the ability to edit map links in the element mass update form (Pavels)

Bug fixes:
..F....... [ZBX-5198] fixed usage of 'memory_get_peak_usage' function appeared in PHP5.2 (Vedmak)